# aspell

./: .gitattributes  .gitignore  FIXMEs  Makefile.am  README-CVS  README.md  TODO  TODO-0.61  appveyor.yml  autogen  autogen.sh  circle.yml  config-debug  config-opt  configure.ac  rm-auto  sanity-check.sh
.circleci/: config.yml
.dockerfiles/jessie/: Dockerfile
.github/workflows/: CI_build.yml
auto/: mk-doc.pl  mk-src.in  mk-src.pl
auto/MkSrc/: CcHelper.pm  Create.pm  Info.pm  Methods.pm  ProcCc.pm  ProcCxx.pm  ProcImpl.pm  ProcNative.pm  ProcNativeImpl.pm  Read.pm  Type.pm  Util.pm
common/: asc_ctype.hpp  basic_list.hpp  block_slist-t.hpp  block_slist.hpp  cache-t.hpp  cache.cpp  cache.hpp  can_have_error.cpp  can_have_error.hpp  char_vector.hpp  check_list.hpp  checker.cpp  checker.hpp  clone_ptr-t.hpp  clone_ptr.hpp  config.cpp  config.hpp  convert.cpp  convert.hpp  convert_filter.cpp  convert_filter.hpp  convert_impl.hpp  copy_ptr.hpp  document_checker.cpp  document_checker.hpp  enumeration.hpp  error.cpp  error.hpp  file_data_util.cpp  file_data_util.hpp  file_util.cpp  file_util.hpp  filter.cpp  filter.hpp  filter_char.hpp  filter_char_vector.hpp  filter_debug.hpp  fstream.cpp  fstream.hpp  generic_copy_ptr-t.hpp  (+50 more)
data/: cp1250.cmap  cp1250.cset  cp1251.cmap  cp1251.cset  cp1252.cmap  cp1252.cset  cp1253.cmap  cp1253.cset  cp1254.cmap  cp1254.cset  cp1255.cmap  cp1255.cset  cp1256.cmap  cp1256.cset  cp1257.cmap  cp1257.cset  cp1258.cmap  cp1258.cset  dvorak.kbd  iso-8859-1.cmap  iso-8859-1.cset  iso-8859-10.cmap  iso-8859-10.cset  iso-8859-11.cmap  iso-8859-11.cset  iso-8859-13.cmap  iso-8859-13.cset  iso-8859-14.cmap  iso-8859-14.cset  iso-8859-15.cmap  iso-8859-15.cset  iso-8859-16.cmap  iso-8859-16.cset  iso-8859-2.cmap  iso-8859-2.cset  iso-8859-3.cmap  iso-8859-3.cset  iso-8859-4.cmap  iso-8859-4.cset  iso-8859-5.cmap  (+15 more)
examples/: Makefile.am  example-c.c  list-dicts.c
interfaces/cc/: pspell.h
lib/: convert-c.cpp  document_checker-c.cpp  dummy.cpp  filter_entry.hpp  find_speller.cpp  info-c.cpp  language-c.hpp  language-cm.cpp  munch_list.cpp  new_checker.cpp  new_config.cpp  new_filter.cpp  new_fmode.cpp  speller-cm.cpp
lib5/: Makefile.am
m4/: ax_cxx_compile_stdcxx.m4
manual/: Makefile.am  aspell-dev.texi  aspell-import.1  aspell.1  aspell.texi  crubadan.texi  custom.css  fdl.texi  lang-supported.texi  lang-unsupported.texi  lgpl.texi  mksrc.texi  oo-only.texi  prezip-bin.1  pspell-config.1  readme.texi  run-with-aspell.1  sug-scores.texi  word-list-compress.1
misc/: po-filter.c
modules/filter/: Makefile.in  context-filter.info  context.cpp  email-filter.info  email.cpp  genconv-filter.info  genconv.cpp  html-filter.info  latex.flt  markdown-filter.info  markdown.cpp  mk-tex.conv.pl  mk-texinfo.conv.pl  nroff-filter.info  nroff.cpp  po-filter.info  po.cpp  sgml-filter.info  sgml.cpp  tex-filter.info  tex.conv  tex.cpp  tex_v1-filter.info  tex_v1.cpp  texinfo-filter.info  texinfo.conv  texinfo.cpp  url-filter.info  url.cpp
modules/filter/modes/: ccpp.amf  comment.amf  email.amf  html.amf  markdown.amf  none.amf  nroff.amf  perl.amf  po.amf  sgml.amf  tex.amf  tex_v1.amf  texinfo.amf  url.amf
modules/speller/default/: affix.cpp  affix.hpp  asuggest.hpp  block_vector.hpp  check_list.hpp  checker_impl.cpp  data.cpp  data.hpp  data_id.hpp  data_util.hpp  editdist.cpp  editdist.hpp  editdist2.hpp  lang_impl.cpp  lang_impl.hpp  language.cpp  language.hpp  leditdist.cpp  leditdist.hpp  matrix.hpp  multi_ws.cpp  phonet.cpp  phonet.hpp  phonetic.cpp  phonetic.hpp  primes.cpp  primes.hpp  readonly_ws.cpp  speller_impl.cpp  speller_impl.hpp  suggest.cpp  suggest.hpp  typo_editdist.cpp  typo_editdist.hpp  vector_hash-t.hpp  vector_hash.hpp  weights.hpp  wordinfo.hpp  writable.cpp
modules/tokenizer/: basic.cpp
myspell/: Makefile.am  README  README.munch  README.replacetable  README_en_US.txt  munch.c  munch.h
ossfuzz/: .gitignore  Makefile.am  aspell_fuzzer.cc  aspell_fuzzer.cpp  ossfuzz.sh  standaloneengine.cpp  testinput.hpp  travisoss.sh
ossfuzz/aspell_fuzzer_corpus/: en_us_input  en_us_input_utf8
po/: LINGUAS  Makevars  POTFILES.in  aspell.pot  ast.po  be.po  ca.po  cs.po  da.po  de.po  en_GB.po  eo.po  es.po  fi.po  fr.po  fur.po  ga.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  mn.po  ms.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  rw.po  sk.po  sl.po  sq.po  sr.po  sv.po  tg.po  uk.po  (+3 more)
prog/: aspell.cpp  check_funs.cpp  check_funs.hpp  checker_string.cpp  checker_string.hpp  compress.c  prezip.c
scripts/: aspell-import  ispell  mkconfig  munchlist  prezip  run-with-aspell.create  spell
test/: .gitignore  Makefile  camel-case  cxx_warnings_test.cpp  en.prepl  filter-test  sanity  suggest.mk  warning-settings.cpp  wide_test_invalid.c  wide_test_valid.c
test/misc/: commonmark-proc
test/suggest/: 00-special-bad-spellers-camel-expect.res  00-special-bad-spellers-expect.res  00-special-fast-camel-expect.res  00-special-fast-expect.res  00-special-normal-camel-expect.res  00-special-normal-expect.res  00-special-normal-nokbd-expect.res  00-special-slow-camel-expect.res  00-special-slow-expect.res  00-special-ultra-camel-expect.res  00-special-ultra-expect.res  00-special-ultra-nokbd-expect.res  00-special.tab  02-orig-bad-spellers-expect.res  02-orig-fast-expect.res  02-orig-normal-expect.res  02-orig-normal-nokbd-expect.res  02-orig-slow-expect.res  02-orig-ultra-expect.res  02-orig-ultra-nokbd-expect.res  02-orig.tab  05-common-bad-spellers-expect.res  05-common-fast-expect.res  05-common-normal-expect.res  05-common-normal-nokbd-expect.res  05-common-slow-expect.res  05-common-ultra-expect.res  05-common-ultra-nokbd-expect.res  05-common.tab  comp  filter.pl  mkmk  refresh  run-batch
win32/: Makefile  dirs.h  libstub.cpp  settings.h  static_filters.src.cpp
